@@ -2529,6 +2529,14 @@ def annotate(*args, **kwargs):
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
+@docstring.copy_dedent(Axes.ticklabel_format)
+def ticklabel_format(**kwargs):
+    ret =  gca().ticklabel_format(**kwargs)
+    draw_if_interactive()
+    return ret
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
 def autumn():
     '''
     set the default colormap to autumn and apply to current image if any.
